@@ -192,5 +192,15 @@ summary(lmH <- lm(yh ~ xh))
 (im <- influence.measures(lmH))
 plot(xh,yh, main = "Huber's data: L.S. line and influential obs.")
 abline(lmH); points(xh[im$is.inf], yh[im$is.inf], pch=20, col=2)
+
+## Irwin's data [Williams 1987]
+xi <- 1:5
+yi <- c(0,2,14,19,30) # number of mice responding to does xi
+mi <- rep(40, 5)      # number of mice exposed
+summary(lmI <- glm(cbind(yi, mi -yi) ~ xi, family = binomial))
+signif(cooks.distance(lmI), 3)# ~= Ci in Table 3, p.184
+(imI <- influence.measures(lmI))
+stopifnot(all.equal(imI$infmat[,"cook.d"],
+	  cooks.distance(lmI)))
 }
 \keyword{regression}
